MODOAIPMH-661 Fixed sonar