@@ -9,6 +9,7 @@ import static org.folio.oaipmh.Constants.CONTENT;
 import static org.folio.oaipmh.Constants.DCB_HOLDINGS_RECORD;
 import static org.folio.oaipmh.Constants.FIELDS;
 import static org.folio.oaipmh.Constants.FIRST_INDICATOR;
+import static org.folio.oaipmh.Constants.ID;
 import static org.folio.oaipmh.Constants.PARSED_RECORD;
 import static org.folio.oaipmh.Constants.SECOND_INDICATOR;
 import static org.folio.oaipmh.Constants.SUBFIELDS;
@@ -138,7 +139,7 @@ public class RecordMetadataManager {
     JsonArray holdings = itemsAndHoldings.getJsonArray(HOLDINGS);
 
     items = excludeDcb(items, HOLDINGS_RECORD_ID);
-    holdings = excludeDcb(holdings, "id");
+    holdings = excludeDcb(holdings, ID);
 
     if (nonNull(items) && CollectionUtils.isNotEmpty(items.getList())) {
       List<Object> fieldsList = getFieldsForUpdate(srsInstance);
@@ -155,7 +156,7 @@ public class RecordMetadataManager {
       return new JsonArray(itemsHoldings.stream()
           .map(JsonObject.class::cast)
           .filter(item -> !DCB_HOLDINGS_RECORD.equals(item.getString(idField)))
-          .collect(Collectors.toList()));
+          .toList());
     }
     return null;
   }
@@ -166,7 +167,7 @@ public class RecordMetadataManager {
       var illPolicyOpt = nonNull(holdings)
           ? holdings.stream()
               .map(JsonObject.class::cast)
-              .filter(hold -> hold.getString("id")
+              .filter(hold -> hold.getString(ID)
               .equals(item.getString(HOLDINGS_RECORD_ID))
                   && StringUtils.isNotBlank(hold.getString(ILL_POLICY)))
               .map(hold -> hold.getString(ILL_POLICY))
@@ -196,7 +197,7 @@ public class RecordMetadataManager {
   private List<JsonObject> getItemsFromItems(JsonArray items) {
     return items.stream()
         .map(JsonObject.class::cast)
-        .filter(item -> item.containsKey("id"))
+        .filter(item -> item.containsKey(ID))
         .toList();
   }
 
@@ -217,7 +218,7 @@ public class RecordMetadataManager {
   private boolean holdingsContainsItem(JsonObject hold, JsonArray items) {
     return items.stream().map(JsonObject.class::cast)
         .anyMatch(item -> ofNullable(item.getString(HOLDINGS_RECORD_ID)).orElse(EMPTY)
-            .equals(hold.getString("id")));
+            .equals(hold.getString(ID)));
   }
 
   /**
@@ -240,7 +241,7 @@ public class RecordMetadataManager {
     if (nonNull(holdings) && CollectionUtils.isNotEmpty(holdings.getList())) {
       List<Object> fieldsList = getFieldsForUpdate(srsInstance);
       holdings.stream().filter(holding ->
-          !((JsonObject) holding).getString("id").equals(DCB_HOLDINGS_RECORD)).forEach(holding ->
+          !((JsonObject) holding).getString(ID).equals(DCB_HOLDINGS_RECORD)).forEach(holding ->
           updateFieldsWithElectronicAccessField((JsonObject) holding, fieldsList,
           suppressedRecordsProcessing));
     }
